force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/ERUM_Posiciones_Oportunidad__c.object-meta.xml
<CustomObject>
    <label>Posiciones Oportunidad</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nº de registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Posiciones Oportunidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>