force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>