force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_Fecha_envio__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Fecha_envio__c</fullName>
    <label>Fecha envío</label>
    <type>Date</type>
</CustomField>