force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_Importe__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Importe__c</fullName>
    <label>Importe</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>