force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Impuesto__c</fullName>
    <label>Impuesto (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>