force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_Numero_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Numero_Presupuesto__c</fullName>
    <label>Número Presupuesto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Presupuesto</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Posiciones Oportunidades</relationshipLabel>
    <relationshipName>Posiciones_Oportunidades</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>