force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_Numero_producto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Numero_producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nº producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.ExternalId</field>
            <operation>contains</operation>
            <valueField>Product2.ExternalId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Posiciones Oportunidades</relationshipLabel>
    <relationshipName>Posiciones_Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>