force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_Precio_Unitario_Vta__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Precio_Unitario_Vta__c</fullName>
    <label>Precio Unitario Vta</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>