force-app/main/default/objects/ERUM_Posiciones_Oportunidad__c/fields/ERUM_UM__c.field-meta.xml
<CustomField>
    <fullName>ERUM_UM__c</fullName>
    <label>UM</label>
    <length>6</length>
    <type>Text</type>
</CustomField>